workflows/hello/service.yml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
     app: hello
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
